tests/NormalTests/paczka1/small_fuzzy/65530523.err
Error in line 1: 0FTR7AK A672 93,9
Error in line 6: EtjwAtOwv A266 83,5
Error in line 5: voMVljTiBBP S948 68,8
Error in line 2: 0FTR7AK S948 6,2
